--- a/src/pages/sq/index.astro
+++ b/src/pages/sq/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import { HeroVideo } from '../../components/layout/hero-video';
+import { HeroVideo } from '../../components/layout/HeroVideo.astro';
 import { BookingWidget } from '../../components/booking/booking-widget';
-import { TrustBar } from '../../components/sections/trust-bar';
+import { TrustBar } from '../../components/sections/TrustBar.astro';
 import { FeaturedTour } from '../../components/sections/featured-tour';
 import { TourGrid } from '../../components/sections/tour-grid';
 import { WhyChooseUs } from '../../components/sections/why-choose-us';
@@ -33,12 +33,12 @@ const subheadline = t(locale, 'Index.description');
       mobileMp4Src="/videos/hero-banner-mobile.mp4"
       webmSrc="/videos/hero-banner.webm"
       posterSrc="/images/hero-poster.webp"
-      client:load
+      mobilePosterSrc="/images/hero-poster-mobile.webp"
     >
       <BookingWidget client:load messages={messages} locale={locale} />
     </HeroVideo>
 
-    <TrustBar client:visible messages={messages} locale={locale} />
+    <TrustBar messages={messages} locale={locale} />
     <FeaturedTour client:visible messages={messages} locale={locale} />
     <TourGrid client:visible messages={messages} locale={locale} />
     <WhyChooseUs client:visible messages={messages} locale={locale} />
