--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const subheadline = t(locale, 'Index.description');
       posterSrc="/images/hero-poster.webp"
       mobilePosterSrc="/images/hero-poster-mobile.webp"
     >
-      <BookingWidget client:visible messages={messages} locale={locale} />
+      <BookingWidget client:load messages={messages} locale={locale} />
     </HeroVideo>
 
     <TrustBar messages={messages} locale={locale} />
