--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,9 +45,10 @@ const isHomePage = Astro.url.pathname === '/' || Astro.url.pathname === '/en/' |
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content={title} />
 		<meta property="og:description" content={description} />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
+		<meta property="og:image:width" content="1024" />
+		<meta property="og:image:height" content="1024" />
 		<meta property="og:image" content={ogImageUrl} />
+		<meta property="og:image:alt" content="Cinematic view of Komani Lake with the gold eagle logo of Komani Lake Tours" />
 		<meta property="og:image:type" content="image/jpeg" />
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
